# upm

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .travis.yml  Android.mk  CMakeCache.txt  CMakeLists.txt  CNAME  CONTRIBUTING  Dockerfile  Doxyfile.in  DoxygenLayout.xml  LICENSE  README  README.md  TODO  addSensor.html  docker-compose.yaml  feed.xml  findSensor.html  howitworks.html  index.html  package-lock.json  sensorDetail.html
examples/: 4digitdisplay.cxx  CMakeLists.txt  adc121c021.cxx  adxl335.cxx  am2315.cxx  biss0001.cxx  ble_broadcast.cxx  buzzer-sound.cxx  cjq4435.cxx  compass.cxx  ds1307.cxx  ecs1030-example.cxx  enc03r.cxx  es08a.cxx  gp2y0a21yk.cxx  grovedryreedrelay.cxx  groveelectricity.cxx  groveled.cxx  grovelight.cxx  grovelinefinder.cxx  groveloudness.cxx  grovemoisture.cxx  groverelay.cxx  groverotary.cxx  groveslide.cxx  groveslider.cxx  grovespeaker.cxx  grovetemp.cxx  grovetouch.cxx  grovevdiv.cxx  grovewater.cxx  guvas12d.cxx  gy65.cxx  hcsr04.cxx  hmc5883l.cxx  htu21d.cxx  itg3200.cxx  joystick12-example.cxx  l298-stepper.cxx  lcm-lcd.cxx  (+40 more)
examples/android-things/: README.md
examples/c/: CMakeLists.txt  a110x.c  abp.c  abpdrrt005pg2a5.c  bh1749.c  bh1750.c  bh1792.c  biss0001.c  bma250e.c  bme280.c  bmg160.c  bmi160.c  bmm150.c  bmp280-bme280.c  bmp280.c  bmpx8x.c  bno055.c  button-intr.c  button.c  button_intr.c  buzzer.c  cjq4435.c  collision.c  dfrec.c  dfrorp.c  dfrph.c  ds18b20.c  ecezo.c  emg.c  enc03r.c  flex.c  gas-mqx.c  gp2y0a.c  grovemoisture.c  gsr.c  guvas12d.c  hcsr04.c  hka5.c  hmc5883l.c  ims.c  (+66 more)
examples/c++/: 2jciebu01_ble.cxx  2jciebu01_usb.cxx  2smpb02e.cxx  4digitdisplay.cxx  Android.mk  CMakeLists.txt  a110x-intr.cxx  a110x.cxx  abp.cxx  abpdrrt005pg2a5.cxx  ad8232.cxx  adafruitms1438-stepper.cxx  adafruitms1438.cxx  adafruitss.cxx  adc-sensor.cxx  adc121c021.cxx  adis16448.cxx  ads1015.cxx  ads1115.cxx  ads1x15-adc-sensor.cxx  ads1x15-ads1015.cxx  ads1x15-ads1115.cxx  ads1x15.cxx  adxl335.cxx  adxl345.cxx  adxrs610.cxx  aeotecdsb09104.cxx  aeotecdw2e.cxx  ak8975.cxx  am2315.cxx  apa102.cxx  apds9002.cxx  apds9930.cxx  at42qt1070.cxx  b5t007001_register  b5t007001_register.cxx  b5t007001_sample.cxx  bh1749.cxx  bh1750.cxx  bh1792.cxx  (+321 more)
examples/java/: A110XSample.java  A110X_Example.java  A110X_intrSample.java  A110X_intr_Example.java  A110xSample.java  A110x_ex.java  ADC121C021Sample.java  ADC121C021_Example.java  AM2315Example.java  AM2315_Example.java  APA102Sample.java  APA102_Example.java  Ad8232Example.java  Ad8232_Example.java  Ads1015Sample.java  Ads1015_Example.java  Ads1115Sample.java  Ads1115_Example.java  Adxl345.java  Adxl345Sample.java  Adxl345_Example.java  AeotecDSB09104_Example.java  AeotecDW2E_Example.java  AeotecSDG2_Example.java  AeotecSS6_Example.java  Apds9002.java  Apds9002_Example.java  BH1749_Example.java  BH1750_Example.java  BH1792_Example.java  BISS0001Sample.java  BISS0001_Example.java  BMA220Sample.java  BMA220_Example.java  BMA250E_Example.java  BMC150_Example.java  BME280_Example.java  BME280_InterfaceExample.java  BME280_Interface_Example.java  BMG160_Example.java  (+331 more)
examples/javascript/: LCD.js  a110x.js  abp.js  abpdrrt005pg2a5.js  ad8232.js  adafruitms1438-stepper.js  adafruitms1438.js  adc121c021.js  adis16448.js  ads1015.js  ads1115.js  ads1x15.js  adxl335.js  adxl345.js  adxrs610.js  aeotecdsb09104.js  aeotecdw2e.js  aeotecsdg2.js  aeotecss6.js  ak8975.js  apa102.js  apds9002.js  at42qt1070.js  bh1749.js  bh1750.js  bh1792.js  biss0001.js  bma220.js  bma250e.js  bmc150.js  bme280.js  bmg160.js  bmi055.js  bmi160.js  bmm150.js  bmp280.js  bmpx8x.js  bmx055.js  bno055.js  button.js  (+222 more)
examples/python/: 4digitdisplay.py  a110x.py  abp.py  abpdrrt005pg2a5.py  ad8232.py  adafruitms1438-stepper.py  adafruitms1438.py  adc121c021.py  ads1015.py  ads1115.py  adxl335.py  adxl345.py  adxrs610.py  aeotecdsb09104.py  aeotecdw2e.py  aeotecsdg2.py  aeotecss6.py  ak8975.py  apa102.py  apds9002.py  at42qt1070.py  bh1749.py  bh1750.py  bh1792.py  biss0001.py  bma220.py  bma250e.py  bmc150.py  bme280.py  bmg160.py  bmi055.py  bmi160.py  bmm150.py  bmp280.py  bmpx8x.py  bmx055.py  bno055.py  button.py  buzzer.py  cjq4435.py  (+195 more)
include/interfaces/: CMakeLists.txt  iAcceleration.hpp  iAngle.hpp  iButton.hpp  iClock.hpp  iCollision.hpp  iDistance.hpp  iDistanceInterrupter.hpp  iEC.hpp  iElectromagnet.hpp  iEmg.hpp  iGas.hpp  iGps.hpp  iGyroscope.hpp  iHallEffect.hpp  iHeartRate.hpp  iHumidity.hpp  iLight.hpp  iLineFinder.hpp  iMagnetometer.hpp  iMoisture.hpp  iMotion.hpp  iOrp.hpp  iPH.hpp  iPressure.hpp  iProximity.hpp  iRotaryAngle.hpp  iTemperature.hpp  iVDiv.hpp  iWater.hpp  interfaces.cxx  interfaces.i  new_interfaces.cxx  new_interfaces.i
src/: CMakeLists.txt  IsrCallback.h  _upm.i  autobox.i  binding.gyp.in  carrays_float.i  carrays_int16_t.i  carrays_uint16_t.i  carrays_uint32_t.i  carrays_uint8_t.i  common_top.i  doxy2swig.py  groups.md  java_buffer.i  java_exceptions.i  java_isr.i  javaswig_blacklist  package.json.in  package.json.npm.in  pkgconfig.in  pom.xml.in  swigme.i.in  upm.h  upm.hpp  upm.i  upm_exception.i  upm_javastdvector.i  upm_library_globals.cxx  upm_library_globals.hpp  upm_vectortypes.i
src/2jciebu01-ble/: 2jciebu01_ble.hpp  2jciebu01_ble.i  CMakeLists.txt
src/2jciebu01-usb/: 2jciebu01.hpp  2jciebu01_usb.hpp  2jciebu01_usb.i  CMakeLists.txt
src/2jciebu01_ble/: 2jciebu01_ble.cxx  2jciebu01_ble.hpp  2jciebu01_ble.i  2jciebu01_ble.json  CMakeLists.txt
src/2jciebu01_usb/: 2jciebu01.cxx  2jciebu01.hpp  2jciebu01_usb.cxx  2jciebu01_usb.hpp  2jciebu01_usb.i  2jciebu01_usb.json  CMakeLists.txt
src/2smpb02e/: 2smpb02e.cxx  2smpb02e.hpp  2smpb02e.i  2smpb02e.json  CMakeLists.txt
src/4digitdisplay/: CMakeLists.txt  jsupm_tm1637.i  tm1637.cxx  tm1637.h
src/a110x/: CMakeLists.txt  a110x.c  a110x.cxx  a110x.h  a110x.hpp  a110x.i  a110x.json  a110x_fti.c  common.i  javaupm_a110x.i  jsupm_a110x.i  pyupm_a110x.i
src/abp/: CMakeLists.txt  abp.c  abp.cxx  abp.h  abp.hpp  abp.i  abp.json  javaupm_abp.i  jsupm_abp.i  pyupm_abp.i
src/abpdrrt005pg2a5/: CMakeLists.txt  abpdrrt005pg2a5.c  (+6 more)
(+3977 files in other folders)
